# python-practice

./: .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
day-01-introduction/: solution.py
day-02-variables-builtin-functions/: solution.py
day-03-operators/: solution.py
day-04-strings/: solution.py
day-05-lists/: solution.py
day-06-tuples/: solution.py
day-07-sets/: solution.py
day-08-dictionaries/: solution.py
day-09-conditionals/: solution.py
day-10-loops/: solution.py
day-11-functions/: solution.py
day-12-modules/: solution.py
day-13-list-comprehension/: solution.py
day-14-higher-order-functions/: solution.py
day-15-type-errors/: solution.py
day-16-datetime/: solution.py
day-17-exception-handling/: solution.py
day-18-regular-expressions/: solution.py
day-19-file-handling/: solution.py
day-20-package-manager/: solution.py
day-21-classes-and-objects/: solution.py
day-22-web-scraping/: solution.py
day-23-virtual-environment/: solution.py
day-24-statistics/: solution.py
day-25-pandas/: solution.py
day-26-python-web/: solution.py
day-27-mongodb/: solution.py
day-28-api/: solution.py
day-29-building-api/: solution.py
day-30-conclusions/: solution.py
